--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'androidx.navigation:navigation-fragment:2.7.7'
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.github.jd-alexander:library:1.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
